package fi.oulu.tol.model;

public enum Language {
	FINNISH,
	ENGLISH
	// TODO: Add Swedish
}
