@startuml
package fi.oulu.tol {
	package fi.oulu.tol.model {

		enum Language {
			FINNISH
			ENGLISH
		}
		class Term
		class TermCategory
		class LocalDatabase
		class TermProvider {
			-categoriesAndTerms: Map<TermCategory, List<Term>>
		}
		interface TermProviderObserver

		TermProvider *--> LocalDatabase
		TermProvider *--> TermProviderObserver: observers
		TermCategory ..> Term : has

		class TermGraphGenerator
		TermGraphGenerator ..> TermProvider : uses
	}

	package fi.oulu.tol.networking {
		class Downloader
	}

	TermProvider *--> Downloader

	package fi.oulu.tol.view {
		class TermCategoryListModel
		class TermCategoryListView
		class CategoryRowRenderer
		class TermListModel
		class TermListView
		class TermDetailView
		class TermRowRenderer
		class SearchPanel
		TermCategoryListView --> TermCategoryListModel
		TermCategoryListView --> CategoryRowRenderer
		TermListView --> TermListModel
		TermListView --> TermRowRenderer
	}
	SearchPanel ..> TermProvider
	TermCategoryListModel ..|> TermProviderObserver
	TermListModel ..|> TermProviderObserver
	TermDetailView ..|> TermProviderObserver
	TermListModel --> Term: terms
	TermCategoryListModel --> TermCategory: categories
	class TVTSanasto {
		+{static}main(args: String[]): void
	}
	class Settings
	TVTSanasto *--> TermProvider
	TVTSanasto ..> TermGraphGenerator : runs
	TVTSanasto --> fi.oulu.tol.view: manages
	TermProvider ..> Settings
}
@enduml